Bug/1285 landlord contact section design (#1286)
* Listing landlord contact section design

* Listing badge overlaps filter

* Listing landlord contact section design

--- a/front-gateway/src/components/Listing/style/_listing-description.scss
+++ b/front-gateway/src/components/Listing/style/_listing-description.scss
@@ -29,16 +29,17 @@
     }
   }
 
+  a,
   button {
     margin-left: 17px;
+  }
 
-    > i {
-      margin-left: 5px;
-      vertical-align: middle;
+  button > i {
+    margin-left: 5px;
+    vertical-align: middle;
 
-      &.fa-comment {
-        margin-bottom: 2px;
-      }
+    &.fa-comment {
+      margin-bottom: 2px;
     }
   }
 
