--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -23,7 +23,7 @@
 
 .filter-wrapper {
   background-color: $brand-white;
-  z-index: 1;
+  z-index: 2;
 
   @include box-shadow(0 2px 10px 0 rgba(0, 0, 0, 0.2));
 
